name:                ftps
version:             0.0.1
synopsis:            Synopsis for FTP server
description:         FTP server

homepage:            https://github.com/Shemplo/Study-courses
license:             MIT
license-file:        LICENSE
author:              Plotnikov Andrey
maintainer:          shemplo@outlook.com
copyright:           2019 Plotnikov Andrey

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Run
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5,
                       network,
                       bytestring,
                       split,
                       text
  default-language:    Haskell2010