name:                ftps
version:             0.0.1
synopsis:            Synopsis for FTP server
description:         FTP server

homepage:            https://github.com/Shemplo/Study-courses
license:             MIT
license-file:        LICENSE
author:              Plotnikov Andrey
maintainer:          shemplo@outlook.com
copyright:           2019 Plotnikov Andrey

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10
tested-with:         GHC == 8.0.1

--executable FTPServer
library
  hs-source-dirs:      src
  exposed-modules:     FTPCommon RunServer RunClient
  ghc-options:         -Wall
  build-depends:       base,
                       network,
                       bytestring,
                       split,
                       text,
                       directory,
                       filepath,
                       lens
  default-language:    Haskell2010