name:           build
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/Shemplo/Haskell-course>
homepage:       https://github.com/Shemplo/Haskell-course
bug-reports:    https://github.com/Shemplo/Haskell-course
author:         Plotnikov Andrey
maintainer:     shemplo@outlook.com
copyright:      2018 Plotnikov Andrey
category:       Education
license:        MIT
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/Shemplo/Haskell-course

library
  exposed-modules:   Test, Intro, Lists, Civil, 
                     Natural, Monoids, Split
  hs-source-dirs:    src
  build-depends:     base >=4.7 && <5
  default-language:  Haskell2010
  ghc-options:       -Wall