name:           project
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/Shemplo/Haskell-course>
homepage:       https://github.com/Shemplo/Haskell-course
bug-reports:    https://github.com/Shemplo/Haskell-course
author:         Plotnikov Andrey
maintainer:     shemplo@outlook.com
copyright:      2018 Plotnikov Andrey
category:       Education
license:        MIT
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/Shemplo/Haskell-course

library
  exposed-modules:   Arithmetics Sequences Hierarchy Parser
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall
  build-depends:     
    base >= 4.5 && < 5,
    random  

test-suite test
  default-language: Haskell2010
  ghc-options:      -Wall
  type:             exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is:        Main.hs
  build-depends: 
    project,
    base >= 4.5 && < 5,
    tasty,
    tasty-hspec,
    hedgehog >= 0.5 && < 0.6,
    tasty-hedgehog,
    containers