name:           project
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/Shemplo/Haskell-course>
homepage:       https://github.com/Shemplo/Haskell-course
bug-reports:    https://github.com/Shemplo/Haskell-course
author:         Plotnikov Andrey
maintainer:     shemplo@outlook.com
copyright:      2018 Plotnikov Andrey
category:       Education
license:        MIT
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/Shemplo/Haskell-course

library
  exposed-modules:   Main ExecutorIntf Executor Parser
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall
  build-depends:     
    base >= 4.5 && < 5,
    containers,
    random,
    mtl,
    megaparsec